--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "prettier": "^2.4.1",
     "supertest": "^6.1.3"
   }
 }
